@@ -105,13 +105,10 @@ class version_info(NamedTuple):
 
     @property
     def __version__(self):
-        return (
-            f"{self.major}.{self.minor}.{self.micro}"
-            + (
-                f"{'r' if self.releaselevel[0] == 'c' else ''}{self.releaselevel[0]}{self.serial}",
-                "",
-            )[self.releaselevel == "final"]
-        )
+        return f"{self.major}.{self.minor}.{self.micro}" + (
+            f"{'r' if self.releaselevel[0] == 'c' else ''}{self.releaselevel[0]}{self.serial}",
+            "",
+        )[self.releaselevel == "final"]
 
     def __str__(self):
         return f"{__name__} {self.__version__} / {__version_time__}"
